Fix: Jerking of the "#mfbpanel" panel when collapsing and expanding on the "Montage review" page

--- a/web/skins/classic/css/base/views/montagereview.css
+++ b/web/skins/classic/css/base/views/montagereview.css
@@ -57,3 +57,8 @@ input[type=range]::-ms-tooltip {
 #minTime, #maxTime {
 margin: 0 4px;
 }
+
+#mfbpanel {
+  width: calc(100% - 25px);
+  float: left;  
+}
